--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ button:hover {
 
 .toggleMode {
     position: absolute;
-    top: 30px;
+    top: 5%;
     left : 50%;
     transform: translateX(-50%);
 }
